--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Zyzo installeren</title>
+  <title>Installeren Willemstad Guide</title>
 
   <style>
     body {
