--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </style>
 
   <div class="wrap">
-    <h1>Zyzo app installeren</h1>
+    <h1>De Willemstad Guid app installeren</h1>
     <p id="intro">Geen App Store nodig. Klaar in 10 seconden.</p>
 
     <!-- iOS -->
